Bug 179077 - drag-and-drop between windows by cover switch alt-tab causes apps to crash
Summary: drag-and-drop between windows by cover switch alt-tab causes apps to crash
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: 4.10
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-29 20:59 UTC by Alan Dion
Modified: 2012-07-15 18:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Dion 2008-12-29 20:59:49 UTC
Version:            (using KDE 4.1.3)
Compiler:          gcc 4.3.1 
OS:                Linux
Installed from:    Gentoo Packages

One can drag a file from a window, and while still holding down the mouse button raise a separate window to the front by pressing alt-tab.  When one then releases the mouse button the file will be dropped into the raised application.  When cover switch is enabled, dragging files from konqueor (or dolphin) and dropping them into an open kate session in this manner sometimes causes both kate and konqueror/dolphin to crash.
Comment 1 FiNeX 2008-12-30 11:26:56 UTC
Hi! If you can reproduce the crash, you should install the debug enabled packages and provide a new backtrace. Read this page for the instructions:

http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports

Thanks!
Comment 2 Martin Flöser 2009-01-23 15:03:09 UTC
No response for more than two weeks and by that I'm marking this bug as resolve remind. Please reopen after providing useful backtrace.
Comment 3 Thomas Lübking 2012-07-09 23:10:07 UTC
Git commit 042d6df9bfead3c1219f3849bdbe2280fabb3188 by Thomas Lübking.
Committed on 24/06/2012 at 11:13.
Pushed by luebking into branch 'master'.

re-use input window, prevent destryoing it

we cannot fix Qt DnD crashing on client destruction (eg. also occurs with toolptips)
but we can prevent it to happen with effects by just un/mapping the input window instead
of destroying and re-creating it
FIXED-IN: 4.10
REVIEW: 105339

M  +49   -18   kwin/effects.cpp

http://commits.kde.org/kde-workspace/042d6df9bfead3c1219f3849bdbe2280fabb3188